6555982 lint uses /lib/llib-lc.ln from outside workspace when linting sdpadm.ln

--- a/usr/src/cmd/sdpadm/Makefile
+++ b/usr/src/cmd/sdpadm/Makefile
@@ -70,6 +70,6 @@ clobber: clean
 	$(RM) $(PROG) $(MSGFILES) $(POFILE)
 
 lint:	$(LINT_OBJS) 
-	$(LINT.c) $(LINTFLAGS) $(LINT_OBJS)
+	$(LINT.c) $(LINTFLAGS) $(LDLIBS) $(LINT_OBJS)
 
 include $(SRC)/Makefile.msg.targ
