--- a/usr/src/uts/sun4u/chicago/Makefile.chicago
+++ b/usr/src/uts/sun4u/chicago/Makefile.chicago
@@ -19,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -64,7 +64,7 @@ CHICAGO_OBJS	= chicago.o
 #
 #	Define modules.
 #
-CHICAGO_KMODS	= ppm platmod
+CHICAGO_KMODS	= ppm platmod fpc
 
 #
 #	Links to UltraSparc III cyrpto modules
