6559430 OSNet cleanup with 6455532 missed a few changes

--- a/usr/src/cmd/tic/Makefile
+++ b/usr/src/cmd/tic/Makefile
@@ -42,7 +42,7 @@ include ../Makefile.cmd
 
 LDLIBS += -lcurses
 CPPFLAGS += -I../../lib/libcurses/screen
-MAPFILE = $(MAPFILE.INT) $(MAPFILE.NGB)
+MAPFILES = $(MAPFILE.INT) $(MAPFILE.NGB)
 LDFLAGS += $(MAPFILES:%=-M%)
 
 .KEEP_STATE:
