6561544 PSARC/2007/149 UTF-8 text preparation functions

--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -318,6 +318,7 @@ GENUNIX_OBJS +=	\
 		tnf_res.o	\
 		turnstile.o	\
 		tty_common.o	\
+		u8_textprep.o	\
 		uadmin.o	\
 		uconv.o		\
 		ucredsys.o	\
