--- a/usr/src/lib/libsecdb/help/profiles/Makefile
+++ b/usr/src/lib/libsecdb/help/profiles/Makefile
@@ -18,7 +18,7 @@
 #
 # CDDL HEADER END
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -51,6 +51,7 @@ HTMLENTS = \
 	RtMediaRestore.html \
 	RtNameServiceAdmin.html \
 	RtNameServiceSecure.html \
+	RtNetIPsec.html \
 	RtNetMngmnt.html \
 	RtNetSecure.html \
 	RtNetWifiMngmnt.html \
