--- a/usr/src/cmd/iscsi/iscsitgtd/Makefile
+++ b/usr/src/cmd/iscsi/iscsitgtd/Makefile
@@ -20,7 +20,7 @@
 #
 
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -32,6 +32,7 @@ OBJS	+= iscsi_authclient.o iscsi_authglue.o iscsi_cmd.o iscsi_conn.o
 OBJS	+= iscsi_crc.o iscsi_ffp.o iscsi_login.o iscsi_sess.o radius.o
 OBJS	+= t10_sam.o t10_spc.o t10_sbc.o t10_raw_if.o t10_ssc.o t10_osd.o
 OBJS	+= util.o util_err.o util_ifname.o util_port.o util_queue.o
+OBJS	+= isns_client.o isns.o
 POFILE= iscsitgtd.po
 POFILES	= $(OBJS:%.o=%.po)
 
