--- a/usr/src/uts/sparc/st/Makefile
+++ b/usr/src/uts/sparc/st/Makefile
@@ -20,7 +20,7 @@
 #
 # uts/sparc/st/Makefile
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -119,8 +119,10 @@ TEST		= test
 
 SCSI_FILES = $(SCSI_OBJS:%.o=-l ../scsi/%.ll)
 
-warlock: warlock_alone warlock_with_esp warlock_with_isp warlock_with_fas \
-	warlock_with_glm
+WARLOCK_TARGETS =  warlock_alone warlock_with_esp warlock_with_fas
+$(CLOSED_BUILD)WARLOCK_TARGETS += warlock_with_isp warlock_with_glm
+
+warlock: $(WARLOCK_TARGETS)
 
 warlock_alone: $(WARLOCK_OK)
 
