6544121 Implement text replication

--- a/usr/src/cmd/mdb/sun4v/modules/ldc/v9/Makefile
+++ b/usr/src/cmd/mdb/sun4v/modules/ldc/v9/Makefile
@@ -42,3 +42,5 @@ MODSRCS_DIR = ../
 CPPFLAGS += -DMP -D_MACHDEP
 CPPFLAGS += -Dsun4v
 CPPFLAGS += -I$(SRC)/uts/sun4v
+CPPFLAGS += -I$(SRC)/uts/sun4
+CPPFLAGS += -I$(SRC)/uts/sparc/v9
