PSARC 2007/282 DLPI MAC-Type Mapping Functions 4714297 libdlpi ought to detect stream hangup properly 6397009 core dumped from get_ethernet_address() 6505649 need DLPI type mapping routines 6524620 dlpi_to_arp belongs in libdlpi, not libdhcputil 6524636 dhcpagent should be ported to libdlpi 6534006 libuuid should be ported to libdlpi 6534017 zoneadm should be ported to libdlpi 6534023 in.rarpd should be ported to libdlpi 6534263 show_linkprop_onelink() should use dlpi_open() instead of open() 6549358 64-bit version of libdladm needed for libuuid 6562226 fsck should link to libraries instead of directly pulling source

--- a/usr/src/cmd/cmd-inet/usr.sbin/Makefile
+++ b/usr/src/cmd/cmd-inet/usr.sbin/Makefile
@@ -146,7 +146,7 @@ $(K5PROGS)		:=	CPPFLAGS += -I$(SRC)/head \
 LDLIBS +=	$(K5LIBS)
 $(TSNETPROG)		:=	LDLIBS += $(ZLAZYLOAD) -ltsnet $(ZNOLAZYLOAD)
 
-in.rarpd		:=	LDLIBS += -linetutil
+in.rarpd		:=	LDLIBS += -linetutil -ldlpi
 route			:=	CPPFLAGS += -DNDEBUG
 gettable in.comsat	:=	LDFLAGS += $(MAPFILE.NGB:%=-M%)
 
