--- a/usr/src/cmd/zoneadm/Makefile
+++ b/usr/src/cmd/zoneadm/Makefile
@@ -34,12 +34,12 @@ include ../Makefile.cmd
 
 ROOTMANIFESTDIR=        $(ROOTSVCSYSTEM)
 
-OBJS= zoneadm.o sw_cmp.o zfs.o dlprims.o
+OBJS= zoneadm.o sw_cmp.o zfs.o
 SRCS = $(OBJS:.o=.c)
 POFILE=zoneadm_all.po
 POFILES= $(OBJS:%.o=%.po)
 
-LDLIBS += -lzonecfg -lsocket -lgen -lpool -lbsm -lzfs -luuid -lnvpair -lbrand
+LDLIBS += -lzonecfg -lsocket -lgen -lpool -lbsm -lzfs -luuid -lnvpair -lbrand -ldlpi
 
 .KEEP_STATE:
 
