--- a/usr/src/lib/libexacct/Makefile
+++ b/usr/src/lib/libexacct/Makefile
@@ -19,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -27,7 +27,7 @@
 
 include ../Makefile.lib
 
-SUBDIRS=	$(MACH) demo
+SUBDIRS=	$(MACH)
 $(BUILD64)SUBDIRS += $(MACH64)
 
 all :=		TARGET = all
