6571429 Man pages needed for signit and signproto

--- a/usr/src/tools/codesign/Makefile
+++ b/usr/src/tools/codesign/Makefile
@@ -31,18 +31,24 @@ SHFILES= \
 PERLFILES= \
 	signit
 
+MAN1FILES= \
+	signit.1 \
+	signproto.1
+
 CLEANFILES = $(SHFILES) $(PERLFILES)
 
 include ../Makefile.tools
 
 OWNER=		root
 GROUP=		bin
+$(ROOTONBLDMAN1FILES) := FILEMODE=	644
 
 .KEEP_STATE:
 
-all:	$(SHFILES) $(PERLFILES)
+all:	$(SHFILES) $(PERLFILES) $(MAN1FILES)
 
-install: all .WAIT $(ROOTONBLDSHFILES) $(ROOTONBLDPERLFILES)
+install: all .WAIT $(ROOTONBLDSHFILES) $(ROOTONBLDPERLFILES) \
+		$(ROOTONBLDMAN1FILES)
 
 clean:
 	$(RM) $(CLEANFILES)
