PSARC 2006/266 Shared Context Support PSARC 2006/267 Shared Region HME Block support 6388600 do_virtual_coloring checks should be expunged from sfmmu 6449192 Integrate support for MMU Shared Contexts 6449195 Integrate support for Shared Region HME Blocks

--- a/usr/src/uts/sun4/ml/offsets.in
+++ b/usr/src/uts/sun4/ml/offsets.in
@@ -209,6 +209,7 @@ ism_blk	ISMBLK_SIZE
 ism_map_t	ISM_MAP_SZ
 	imap_seg	IMAP_SEG
 	imap_vb_shift	IMAP_VB_SHIFT
+	imap_rid	IMAP_RID
 	imap_hatflags	IMAP_HATFLAGS
 	imap_sz_mask	IMAP_SZ_MASK
 	imap_ismhat	IMAP_ISMHAT
