--- a/usr/src/uts/sun4v/ml/mach_offsets.in
+++ b/usr/src/uts/sun4v/ml/mach_offsets.in
@@ -18,7 +18,7 @@
 \
 \ CDDL HEADER END
 \
-\ Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+\ Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 \ Use is subject to license terms.
 \
 \ offsets.in: input file to produce assym.h using the stabs program
@@ -137,11 +137,19 @@ hat	HAT_SIZE
 	sfmmu_cpusran
 	sfmmu_tsb
 	sfmmu_ismblkpa
-	sfmmu_flags
+	sfmmu_tteflags
+	sfmmu_rtteflags
+	sfmmu_srdp
+	sfmmu_region_map.h_rmap_s.hmeregion_map	SFMMU_HMERMAP
+	sfmmu_scdp
 	sfmmu_hvblock
 	sfmmu_cext
 	sfmmu_ctx_lock
 	sfmmu_ctxs
+
+sf_scd SCD_SIZE
+	scd_sfmmup
+	scd_region_map.h_rmap_s.hmeregion_map	SCD_HMERMAP
 
 sfmmu_global_stat HATSTAT_SIZE
 	sf_pagefaults		HATSTAT_PAGEFAULT
@@ -153,30 +161,32 @@ sfmmu_global_stat HATSTAT_SIZE
 sf_hment	SFHME_SIZE	SFHME_SHIFT
 	hme_tte		SFHME_TTE
 
-tsbmiss		TSBMISS_SIZE TSBMISS_SHIFT
-	tsbptr		TSBMISS_TSBPTR
-	tsbptr4m	TSBMISS_TSBPTR4M
+tsbmiss		TSBMISS_SIZE
 	ksfmmup		TSBMISS_KHATID
 	usfmmup		TSBMISS_UHATID
-	khashsz		TSBMISS_KHASHSZ
-	khashstart	TSBMISS_KHASHSTART
-	uhashsz		TSBMISS_UHASHSZ
-	uhashstart	TSBMISS_UHASHSTART
-	hat_flags	TSBMISS_HATFLAGS
+	usrdp		TSBMISS_SHARED_UHATID
+	tsbptr		TSBMISS_TSBPTR
+	tsbptr4m	TSBMISS_TSBPTR4M
+	tsbscdptr	TSBMISS_TSBSCDPTR
+	tsbscdptr4m	TSBMISS_TSBSCDPTR4M
 	ismblkpa	TSBMISS_ISMBLKPA
-	itlb_misses	TSBMISS_ITLBMISS
-	dtlb_misses	TSBMISS_DTLBMISS
+	khashstart	TSBMISS_KHASHSTART
+	uhashstart	TSBMISS_UHASHSTART
+	khashsz		TSBMISS_KHASHSZ
+	uhashsz		TSBMISS_UHASHSZ
+	uhat_tteflags	TSBMISS_UTTEFLAGS
+	uhat_rtteflags	TSBMISS_URTTEFLAGS
 	utsb_misses	TSBMISS_UTSBMISS
 	ktsb_misses	TSBMISS_KTSBMISS
 	uprot_traps	TSBMISS_UPROTS
 	kprot_traps	TSBMISS_KPROTS
 	scratch		TSBMISS_SCRATCH
+	shmermap	TSBMISS_SHMERMAP
+	scd_shmermap	TSBMISS_SCDSHMERMAP
 
 \#define	TSB_TAGACC	(0 * TSBMISS_SCRATCH_INCR)
 \#define	TSBMISS_HMEBP	(1 * TSBMISS_SCRATCH_INCR)
 \#define	TSBMISS_HATID	(2 * TSBMISS_SCRATCH_INCR)
-\#define	TSBMISS_XMMURET	(3 * TSBMISS_SCRATCH_INCR)
-\#define	TSBMISS_XMMUPTR	(4 * TSBMISS_SCRATCH_INCR)
 
 kpmtsbm		KPMTSBM_SIZE KPMTSBM_SHIFT
 	vbase		KPMTSBM_VBASE
