--- a/usr/src/cmd/regcmp/Makefile
+++ b/usr/src/cmd/regcmp/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,22 +19,24 @@
 # CDDL HEADER END
 #
 #
-#ident	"%Z%%M%	%I%	%E% SMI"
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
+# Use is subject to license terms.
 #
-# Copyright (c) 1989 by Sun Microsystems, Inc.
+# ident	"%Z%%M%	%I%	%E% SMI"
 #
 
 PROG= regcmp 
 
-include ../Makefile.cmd
+include		../Makefile.cmd
 
 .KEEP_STATE:
 
 all: $(PROG)
 
-install: all $(ROOTCCSBINPROG)
+install: all $(ROOTPROG) $(ROOTCCSBINLINK)
 
 clean:
+	$(RM) $(PROG)
 
 lint:	lint_PROG
 
