--- a/usr/src/cmd/sgs/dump/Makefile.targ
+++ b/usr/src/cmd/sgs/dump/Makefile.targ
@@ -19,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -33,13 +33,10 @@ $(PROG):	$(OBJS)
 		$(LINK.c) $(OBJS) -o $@ $(LDLIBS)
 		$(POST_PROCESS)
 
-$(ROOTCCSBIN64)/%: %
-		$(INS.file)
-
 all:		$(PROG)
 
 package \
-install:	all $(ROOTCCSBINPROG)
+install:        all $(VAR_SGSBINPROG) $(VAR_SGSCCSLINK)
 
 clean:
 		$(RM) $(OBJS) $(CLEANFILES)
