--- a/usr/src/cmd/sgs/dump/amd64/Makefile
+++ b/usr/src/cmd/sgs/dump/amd64/Makefile
@@ -20,7 +20,7 @@
 #
 
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -35,7 +35,8 @@ ELFLIBDIR =	$(ELFLIBDIR64)
 DEMLIB =	$(DEMLIB64)
 CONVLIBDIR =	$(CONVLIBDIR64)
 
-ROOTCCSBINPROG=	$(ROOTCCSBINPROG64)
+VAR_SGSBINPROG=	$(VAR_SGSBINPROG64)
+VAR_SGSCCSLINK=	$(VAR_SGSCCSLINK64)
 
 include		../Makefile.targ
 include		../../Makefile.sub.64
@@ -43,4 +44,4 @@ include		../../Makefile.sub.64
 lint:		$(LINTOUT64) $(SGSLINTOUT)
 
 install \
-package:	$(ROOTCCSBINPROG64)
+package:	$(VAR_SGSBINPROG64)
