--- a/usr/src/cmd/sgs/lari/Makefile
+++ b/usr/src/cmd/sgs/lari/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -22,7 +21,7 @@
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
 #
-# Copyright 2003 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 
 PROG=		lari
@@ -43,10 +42,7 @@ $(PROG):	$(PSRC)
 		$(CHMOD) +x $@
 
 install \
-package:	$(ROOTCCSBINPROG)
-
-$(ROOTCCSBIN)/%:%
-		$(INS.file)
+package:	all $(VAR_SGSBINPROG) $(VAR_SGSCCSLINK)
 
 clean:
 		$(RM) $(PROG)
