--- a/usr/src/cmd/sgs/lorder/Makefile
+++ b/usr/src/cmd/sgs/lorder/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,24 +19,26 @@
 # CDDL HEADER END
 #
 #
-#ident	"%Z%%M%	%I%	%E% SMI"
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
+# Use is subject to license terms.
 #
-# Copyright (c) 1993 by Sun Microsystems, Inc.
+#ident	"%Z%%M%	%I%	%E% SMI"
 #
 # cmd/sgs/lorder/Makefile
 #
 
 PROG=		lorder
 
-SRCS=		$(PROG:%=%.sh
+SRCS=		$(PROG:%=%.sh)
 
-include 	../../Makefile.cmd
+include 	$(SRC)/cmd/Makefile.cmd
+include		$(SRC)/cmd/sgs/Makefile.com
 
 .KEEP_STATE:
 
 all:		$(PROG)
 
-install:	all $(ROOTCCSBINPROG)
+install:	all $(VAR_SGSBINPROG) $(VAR_SGSCCSLINK)
 
 clean:
 
