--- a/usr/src/cmd/sgs/nm/sparcv9/Makefile
+++ b/usr/src/cmd/sgs/nm/sparcv9/Makefile
@@ -19,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -67,7 +67,7 @@ $(PROG):	$(OBJS) ../../sgsdemangler/sparcv9/libdemangle.a
 		$(POST_PROCESS)
 
 package \
-install:	all $(ROOTCCSBINPROG64)
+install:	all $(VAR_SGSBINPROG64) $(VAR_SGSCCSLINK64)
 
 clean:
 		$(RM) $(OBJS) $(CLEANFILES)
