--- a/usr/src/cmd/sgs/size/sparcv9/Makefile
+++ b/usr/src/cmd/sgs/size/sparcv9/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 1998-2003 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2007 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -50,9 +49,6 @@ CLEANFILES +=	$(LINTOUT)
 %.o:		../common/%.c
 		$(COMPILE.c) $<
 
-$(ROOTCCSBIN64)/%: %
-	$(INS.file)
-
 .KEEP_STATE:
 
 all:		$(PROG)
@@ -62,7 +58,7 @@ $(PROG):	$(OBJS)
 		$(POST_PROCESS)
 
 package \
-install:	all $(ROOTCCSBINPROG64)
+install:	all $(ROOTPROG64) $(ROOTCCSBINLINK64)
 
 clean:
 		$(RM) $(OBJS) $(CLEANFILES)
