--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -932,6 +932,7 @@ ZFS_COMMON_OBJS +=		\
 	dsl_pool.o		\
 	dsl_synctask.o		\
 	dmu_zfetch.o		\
+	dsl_deleg.o		\
 	dsl_prop.o		\
 	fletcher.o		\
 	gzip.o			\
@@ -971,7 +972,8 @@ ZFS_COMMON_OBJS +=		\
 
 ZFS_SHARED_OBJS +=		\
 	zfs_namecheck.o		\
-	zfs_prop.o
+	zfs_prop.o		\
+	zfs_deleg.o
 
 ZFS_OBJS +=			\
 	$(ZFS_COMMON_OBJS)	\
